--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -15,4 +15,4 @@ permissions:
 
 jobs:
   deploy:
-    uses: arafatm/ghp/.github/workflows/jekyll-gh-pages.yml@main
+    uses: arafatm/ghp/.github/workflows/ghp.yml@main
